--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
-    "client": "npm start --prefix client",
-    "build": "babel src -d lib",
-    "test": "jest"
+    "client": "npm start --prefix client"
   
   },
   "author": "",
