--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"overrides": {
+  },
+  "overrides": {
     "autoprefixer": "10.4.5"
 }
 }
