--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "@syncfusion/ej2-react-calendars": "^20.2.38",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -13,7 +17,6 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.5.0",
     "react-calendar": "^3.7.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
