--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
-    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@syncfusion/ej2-react-calendars": "^20.2.38",
     "@testing-library/jest-dom": "^5.16.4",
