--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
     "client": "npm start --prefix client",
-    "build": "webpack --watch"
+    "build": "cd client && npm run build"
   
   },
   "author": "",
